--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 	Fractal by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Edits by Jonathan McMeans
 -->
 <html>
 	<head>
-		<title>Fractal by HTML5 UP</title>
+		<title>Guild Wars 2 Player Characters</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,12 +20,10 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="content">
-					<h1><a href="#">Fractal</a></h1>
-					<p>Just a simple, single page responsive<br />
-					template brought to you by <a href="http://html5up.net">HTML5 UP</a></p>
+					<h1><a href="#">Guild Wars 2 Player Character Choices</a></h1>
+					<p>A simple project for CEG 3250 Data Analysis.</p>
 					<ul class="actions">
-						<li><a href="#" class="button special icon fa-download">Download</a></li>
-						<li><a href="#one" class="button icon fa-chevron-down scrolly">Learn More</a></li>
+						<li><a href="#one" class="button">Abstract</a></li>
 					</ul>
 				</div>
 				<div class="image phone"><div class="inner"><img src="images/screen.jpg" alt="" /></div></div>
@@ -32,6 +31,7 @@
 
 		<!-- One -->
 			<section id="one" class="wrapper style2 special">
+				<a name="one">
 				<header class="major">
 					<h2>Sed ipsum magna lorem tempus amet<br />
 					vehicula et gravida elementum</h2>
