Update Abstract part1

--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
 			<header id="header">
 				<div class="content">
 					<h1><a href="#">Guild Wars 2 Player Character Choices</a></h1>
-					<p>A simple project for CEG 3250 Data Analysis.</p>
+					<p>A simple project for CEG 3250 Data Analysis.<br />
+					   Team Name: Team_Solo_Queue<br />
+					   Members: Jonathan McMeans</p>
 					<ul class="actions">
-						<li><a href="#one" class="button">Abstract</a></li>
+						<li><a href="#one" class="button">Abstract-System</a></li>
+						<li><a href="#two" class="button">Abstract-Where & Why</a></li>
 					</ul>
 				</div>
 				<div class="image phone"><div class="inner"><img src="images/screen.jpg" alt="" /></div></div>
@@ -33,18 +36,17 @@
 			<section id="one" class="wrapper style2 special">
 				<a name="one">
 				<header class="major">
-					<h2>Sed ipsum magna lorem tempus amet<br />
-					vehicula et gravida elementum</h2>
+					<h2>Abstract-System</h2>
+					<p>Guild Wars 2 is an MMORPG with various player choices available.  Some choices are available at character creation (name, race, gender, profession), while others are available through in game content (crafting disciplines, weapon choice, specializations, order).  Players can choose any combination of these to fully create their unique character.  Names are simply strings of characters, and gender is male or female.  Race is one of five options: Charr, Asura, Sylvari, Human, and Norn.  Profession is one of nine options: Elementalist, Necromancer, Mesmer, Ranger, Thief, Engineer, Guardian, Warrior, and Revenant.  The professions can be grouped by armor type, the first three are light-armor, the second three are medium-armor, and the last three are heavy armor.  Weapons are profession specific, such that an Elementalist cannot use a sword but can use a dagger, while the Warrior can use the sword but not the dagger.  Each profession has its own unique set of specializations, broken down into five core specializations and one elite specialization.  Each specialization contains three tiers of effects to choose from, with each tier having one passively granted and one out of three actively granted. These are the minor and major traits, respectively. In total, there will be three minor traits and three major traits chosen for each specialization, and each character can choose three specializations, totaling to eighteen traits.  There are three orders for players to choose from (Durmand Priory, Vigil, Order of Whispers) by going through the character’s personal story.  There are eight crafting disciplines to choose from: Huntsman, Weaponsmithing, Artificing, Leatherworking, Armorsmithing, Tailoring, Jeweling, and Chef.  Each character can choose two of these disciplines, with the option of paying for a premium type purchase to increase this number.</p>
 				</header>
 				<ul class="icons major">
-					<li><span class="icon fa-camera-retro"><span class="label">Shoot</span></span></li>
-					<li><span class="icon fa-refresh"><span class="label">Process</span></span></li>
-					<li><span class="icon fa-cloud"><span class="label">Upload</span></span></li>
+					
 				</ul>
 			</section>
 
 		<!-- Two -->
 			<section id="two" class="wrapper">
+				<a name="two">
 				<div class="inner alt">
 					<section class="spotlight">
 						<div class="image"><img src="images/pic01.jpg" alt="" /></div>
