--- a/index.html
+++ b/index.html
@@ -61,42 +61,35 @@
 			</section>
 
 		<!-- Two -->
-			<section id="two" class="wrapper">
+			<section id="two" class="wrapper style2 special">
 				<a name="two">
-				<div class="inner alt">
-					<section class="spotlight">
-						
-						<div class="content">
-							<h3>Abstract-Where & Why</h3>
-							<p>The data would be collected using the Guild Wars 2 API  along with player participation.  Players will have to <br />
-							generate a unique API code  in order to allow the site to collect their information about the choices they have made.  <br />
-							I plan to ask my guilds as well as make a post on the forum asking for people to use the site.  The data would come in <br />
-							a format similar to CSV to allow for fairly easy parsing.  The trick will be to use the API effectively in order to <br />
-							transform number codes into proper terminology.  Given that enough people participate in my data collection, there <br />
-							should be ample data and I plan to gather all character information for each character in the account, giving a large <br />
-							number of attributes for each player record.  This will allow for the detailed analysis of whether choice matters in <br />
-							character creation or if certain combinations will be the majority of player decisions.<br />
-							The major question will be if certain attributes are linked stronger together than others, such as race, profession, <br />
-							and crafting disciplines.  Are these three linked in any way such that a prediction can be made about the crafting <br />
-							disciplines a player will choose given a race and profession?  This type of information is useful as it can restrict the <br />
-							complexity for future games.  Players like choices, but do the choices need to be so complex?  If a majority of Human <br />
-							Warriors choose Weaponsmithing and Jeweling as their crafting disciplines, creating a Human Warrior could then unlock <br />
-							those disciplines at character creation.  This would reduce the information needed to be stored, as the Human Warrior <br />
-							could then just link to a Weaponsmithing/Jeweling crafting discipline combination.  It will also be interesting to see <br />
-							the connections players make between race and profession.  Will there be any connection at all?  If there is, the <br />
-							character creation could then be simplified further.  I would use a linking node graph that would weight each connection <br />
-							based on the number of times it appears.  As players enter their data, the graph would update to reflect the most <br />
-							recently entered data.  As the data set increases, the change in the graph will be minimal for each new player, and <br />
-							conclusions can then start to be formed.
-							</p>
-						</div>
-					</section>
+				<header class="major">
+					<h2>Abstract-Where & Why</h2>
+					<p>The data would be collected using the Guild Wars 2 API  along with player participation.  Players will have to <br />
+					generate a unique API code  in order to allow the site to collect their information about the choices they have made.  <br />
+					I plan to ask my guilds as well as make a post on the forum asking for people to use the site.  The data would come in <br />
+					a format similar to CSV to allow for fairly easy parsing.  The trick will be to use the API effectively in order to <br />
+					transform number codes into proper terminology.  Given that enough people participate in my data collection, there <br />
+					should be ample data and I plan to gather all character information for each character in the account, giving a large <br />
+					number of attributes for each player record.  This will allow for the detailed analysis of whether choice matters in <br />
+					character creation or if certain combinations will be the majority of player decisions.<br />
+					The major question will be if certain attributes are linked stronger together than others, such as race, profession, <br />
+					and crafting disciplines.  Are these three linked in any way such that a prediction can be made about the crafting <br />
+					disciplines a player will choose given a race and profession?  This type of information is useful as it can restrict the <br />
+					complexity for future games.  Players like choices, but do the choices need to be so complex?  If a majority of Human <br />
+					Warriors choose Weaponsmithing and Jeweling as their crafting disciplines, creating a Human Warrior could then unlock <br />
+					those disciplines at character creation.  This would reduce the information needed to be stored, as the Human Warrior <br />
+					could then just link to a Weaponsmithing/Jeweling crafting discipline combination.  It will also be interesting to see <br />
+					the connections players make between race and profession.  Will there be any connection at all?  If there is, the <br />
+					character creation could then be simplified further.  I would use a linking node graph that would weight each connection <br />
+					based on the number of times it appears.  As players enter their data, the graph would update to reflect the most <br />
+					recently entered data.  As the data set increases, the change in the graph will be minimal for each new player, and <br />
+					conclusions can then start to be formed.</p>
+				</header>
 					<section class="special">
 						<ul class="icons labeled">
-							
 						</ul>
 					</section>
-				</div>
 			</section>
 
 		<!-- Three -->
