--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
-	<body id="top">
+	<body id="top" background="GuildWars2.jpg">
 
 		<!-- Header -->
 			<header id="header">
