--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</header>
 
 		<!-- One -->
-			<section id="one" class="wrapper style2 special">
+			<section id="one">
 				<a name="one">
 				<header class="major">
 					<h2>Abstract-System</h2>
@@ -61,7 +61,7 @@
 			</section>
 
 		<!-- Two -->
-			<section id="two" class="wrapper style2 special">
+			<section id="two">
 				<a name="two">
 				<header class="major">
 					<h2>Abstract-Where & Why</h2>
