--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<a name="one">
 				<header class="major">
 					<h2>Abstract-System</h2>
-					<p><a href="https://www.guildwars2.com/en/">Guild Wars 2</a> is an MMORPG with various player choices available.  Some choices are available at character 
+					<p class="text"><a href="https://www.guildwars2.com/en/">Guild Wars 2</a> is an MMORPG with various player choices available.  Some choices are available at character 
 					creation (name, race, gender, profession), while others are available through in game content 
 					(crafting disciplines, weapon choice, specializations, order).  Players can choose any combination of these to 
 					fully create their unique character.  Names are simply strings of characters, and gender is male or female. 
@@ -65,7 +65,7 @@
 				<a name="two">
 				<header class="major">
 					<h2>Abstract-Where & Why</h2>
-					<p>The data would be collected using the <a href="https://wiki.guildwars2.com/wiki/API:Main">Guild Wars 2 API</a> along with player participation.  Players will have to 
+					<p class="text">The data would be collected using the <a href="https://wiki.guildwars2.com/wiki/API:Main">Guild Wars 2 API</a> along with player participation.  Players will have to 
 					generate a unique API code in order to allow the site to collect their information about the choices they have made.  
 					I plan to ask my guilds as well as make a post on the forum asking for people to use the site.  The data would come in 
 					a format similar to CSV to allow for fairly easy parsing.  The trick will be to use the API effectively in order to 
