--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
 					Team Name: Team_Solo_Queue<br /> 
 					Members: Jonathan McMeans</p>
 					<ul class="actions">
-						<li><a href="#one" class="button">Abstract-System</a></li>
-						<li><a href="#two" class="button">Abstract-Where & Why</a></li>
+						<li><a href="#system" class="button">Abstract-System</a></li>
+						<li><a href="#where_why" class="button">Abstract-Where & Why</a></li>
 					</ul>
 				</div>
 				
 			</header>
 
 		<!-- One -->
-			<section id="one">
-				<a name="one">
+			<section id="system">
+				<a name="system">
 				<header class="major">
 					<h2>Abstract-System</h2>
 					<p class="text"><a href="https://www.guildwars2.com/en/">Guild Wars 2</a> is an MMORPG with various player choices available.  Some choices are available at character 
@@ -61,8 +61,8 @@
 			</section>
 
 		<!-- Two -->
-			<section id="two">
-				<a name="two">
+			<section id="where_why">
+				<a name="where_why">
 				<header class="major">
 					<h2>Abstract-Where & Why</h2>
 					<p class="text">The data would be collected using the <a href="https://wiki.guildwars2.com/wiki/API:Main">Guild Wars 2 API</a> along with player participation.  Players will have to 
