--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<!-- One -->
 			<section id="system">
 				<a name="system">
-				<header class="major">
+				<header>
 					<h2>Abstract-System</h2>
 					<p class="align-left"><a href="https://www.guildwars2.com/en/">Guild Wars 2</a> is an MMORPG with various player choices available.  Some choices are available at character 
 					creation (name, race, gender, profession), while others are available through in game content 
@@ -63,7 +63,7 @@
 		<!-- Two -->
 			<section id="where_why">
 				<a name="where_why">
-				<header class="major">
+				<header>
 					<h2>Abstract-Where & Why</h2>
 					<p class="align-left">The data would be collected using the <a href="https://wiki.guildwars2.com/wiki/API:Main">Guild Wars 2 API</a> along with player participation.  Players will have to 
 					generate a unique API code in order to allow the site to collect their information about the choices they have made.  
