test background for text

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				
 			</header>
 
-		<!-- One -->
+		<!-- System -->
 			<section id="system">
 				<a name="system">
 				<header>
@@ -60,7 +60,7 @@
 				</ul>
 			</section>
 
-		<!-- Two -->
+		<!-- Where_why -->
 			<section id="where_why">
 				<a name="where_why">
 				<header>
