--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</header>
 
 		<!-- System -->
-			<section id="system">
+			<section id="system" class="main">
 				<a name="system">
 				<header>
 					<h2>Abstract-System</h2>
