--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="content">
-					<h1>Guild Wars 2 Player Character Choices</h1>
+					<h1 class="align-center">Guild Wars 2 Player Character Choices</h1>
 					<p class="align-left">A simple project for CEG 3250 Data Analysis.<br />
 					Team Name: Team_Solo_Queue<br /> 
 					Members: Jonathan McMeans</p>
@@ -33,10 +33,10 @@
 			</header>
 
 		<!-- System -->
-			<section id="system" class="main">
+			<section id="system">
 				<a name="system">
-				<header>
-					<h2>Abstract-System</h2>
+				<header class="main">
+					<h2 class="align-center">Abstract-System</h2>
 					<p class="align-left"><a href="https://www.guildwars2.com/en/">Guild Wars 2</a> is an MMORPG with various player choices available.  Some choices are available at character 
 					creation (name, race, gender, profession), while others are available through in game content 
 					(crafting disciplines, weapon choice, specializations, order).  Players can choose any combination of these to 
@@ -64,7 +64,7 @@
 			<section id="where_why">
 				<a name="where_why">
 				<header>
-					<h2>Abstract-Where & Why</h2>
+					<h2 class="align-center">Abstract-Where & Why</h2>
 					<p class="align-left">The data would be collected using the <a href="https://wiki.guildwars2.com/wiki/API:Main">Guild Wars 2 API</a> along with player participation.  Players will have to 
 					generate a unique API code in order to allow the site to collect their information about the choices they have made.  
 					I plan to ask my guilds as well as make a post on the forum asking for people to use the site.  The data would come in 
