--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 			</header>
 
 		<!-- System -->
-			<section id="system">
+			<section id="opac">
 				<a name="system">
-				<header class="opac">
+				<header>
 					<h2 class="align-center">Abstract-System</h2>
 					<p class="align-left"><a href="https://www.guildwars2.com/en/">Guild Wars 2</a> is an MMORPG with various player choices available.  Some choices are available at character 
 					creation (name, race, gender, profession), while others are available through in game content 
