--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="content">
+				<div>
 					<h1 class="align-center">Guild Wars 2 Player Character Choices</h1>
-					<p class="align-left">A simple project for CEG 3250 Data Analysis.<br />
+					<p class="align-right">A simple project for CEG 3250 Data Analysis.<br />
 					Team Name: Team_Solo_Queue<br /> 
 					Members: Jonathan McMeans</p>
 					<ul class="actions">
@@ -33,7 +33,7 @@
 			</header>
 
 		<!-- System -->
-			<section id="opac">
+			<section id="system">
 				<a name="system">
 				<header>
 					<h2 class="align-center">Abstract-System</h2>
