--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<header id="header">
 				<div>
 					<h1 class="align-center">Guild Wars 2 Player Character Choices</h1>
-					<p class="align-right">A simple project for CEG 3250 Data Analysis.<br />
+					<p class="align-right">A simple project for CEG 3250 Data Analysis<br />
 					Team Name: Team_Solo_Queue<br /> 
 					Members: Jonathan McMeans</p>
 					<ul class="actions">
