--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 					<ul class="actions">
 						<li><a href="#system" class="button">Abstract-System</a></li>
 						<li><a href="#where_why" class="button">Abstract-Where & Why</a></li>
+						<li><a href="#how_to" class="button">How To</a></li>
 					</ul>
 				</div>
 				
@@ -90,6 +91,16 @@
 						<ul class="icons labeled">
 						</ul>
 					</section>
+			</section>
+			
+			<section id="how_to">
+			<a name="how_to">
+				<header>
+					<h2 class="align-center">How To</h2>
+					<p class="align-left">Step 1: Log in to your Guild Wars 2 account. <img src="images/my_acc.jpg">
+					
+					</p>
+				</header>
 			</section>
 
 		<!-- Three -->
