added images and how to generate a key

--- a/index.html
+++ b/index.html
@@ -97,7 +97,20 @@
 			<a name="how_to">
 				<header>
 					<h2 class="align-center">How To</h2>
-					<p class="align-left">Step 1: Log in to your Guild Wars 2 account. <img src="images/my_acc.jpg">
+					<p class="align-left">Step 1: Log in to your Guild Wars 2 account.<br>
+					<img src="images/my_acc.jpg"><br><img src="images/login.jpg"><br>
+					Step 2: Click Applications tab.<br>
+					<img src="images/app.jpg"><br>
+					Step 3: Create a new key.<br>
+					<img src="images/new_key.jpg"><br>
+					Step 4: Generate a key with account and character permissions. Note that only character permissions will be used,
+					the account permission is required to generate the key. A name can be given at the top if you would like.<br>
+					<img src="images/key.jpg"><br>
+					Step 5: Your key has been generated! Copy the key to use on this site to add your character data to the current data. 
+					In the picture below, the key is highlighted in blue. Note that this is a key generated to demonstrate the steps required,
+					the key has been deleted and will not work.<br>
+					<img src="images/final_key.jpg"><br>
+					
 					
 					</p>
 				</header>
