--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			<section id="how_to">
 			<a name="how_to">
 				<header>
-					<h2 class="align-center">How To</h2>
+					<h2 class="align-center">How To Create a Key</h2>
 					<p class="align-left">Step 1: Log in to your Guild Wars 2 account.<br>
 					<img src="images/my_acc.jpg"><br><img src="images/login.jpg"><br>
 					Step 2: Click Applications tab.<br>
