test input view

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 						<li><a href="#system" class="button">Abstract-System</a></li>
 						<li><a href="#where_why" class="button">Abstract-Where & Why</a></li>
 						<li><a href="#how_to" class="button">How To Create a Key</a></li>
+						<li><a href="#key_app" class="button">Characters Graph</a></li>
 					</ul>
 				</div>
 				
@@ -117,8 +118,10 @@
 			<section id="key_app">
 			<a name="key_app">
 				<header>
-					<h2 class="align-center"> </h2>
-					
+					<h2 class="align-center">Characters Graph</h2>
+					<p class="align-left">Enter the API key to add your character data to the graph</p>
+					<input id="key">
+					<button type="button" onclick="">Enter</button>
 				</header>
 			</section>
 
