test new button

--- a/index.html
+++ b/index.html
@@ -119,9 +119,10 @@
 			<a name="key_app">
 				<header>
 					<h2 class="align-center">Characters Graph</h2>
-					<p class="align-left">Enter the API key to add your character data to the graph</p>
+					<p class="align-left">Enter the API key to add your character data to the graph<br>
 					<input id="key">
-					<button type="button" onclick="">Enter</button>
+					<button class="button" onclick="">Enter</button>
+					</p>
 				</header>
 			</section>
 
