--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 					<h2 class="align-center">Characters Graph</h2>
 					<p class="align-left">Enter the API key to add your character data to the graph<br>
 					<input id="key">~~
-					<button class="button1" onclick="">Enter</button>
+					<!--<button class="button1" onclick="">Enter</button>-->
 					</p>
 				</header>
 			</section>
