--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 				<header>
 					<h2 class="align-center">Characters Graph</h2>
 					<p class="align-left">Enter the API key to add your character data to the graph<br>
-					<input id="key">
+					<input id="key" size="64">
 					<button class="button1" onclick="getKey()">Enter</button>
 					</p>
 					<p id="temp"></p>
