--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
 					<button class="button1" onclick="getKey()">Enter</button>
 					</p>
 					<p id="temp"></p>
+					<script src="assets/js/request.js"></script>
 					<script>
 					function getKey() {
 						var key, check, url, full, used;
