--- a/index.html
+++ b/index.html
@@ -124,11 +124,10 @@
 					<button class="button1" onclick="getKey()">Enter</button>
 					</p>
 					<p id="temp"></p>
-					<script src="assets/js/request.js"></script>
+					<script src="assets/js/FW_GW2.js"></script>
 					<script>
 					function getKey() {
 						var key, check, url, full, used;
-						var request = require('request');
 						// get the user input
 						key = document.getElementById("key").value;
 						// check if 'valid' key
@@ -137,12 +136,13 @@
 							if (check[0].length==8 & check[1].length==4 & check[2].length==4 & check[3].length==4 & check[4].length==20 & check[5].length==4 & 
 							check[6].length==4 & check[7].length==4 & check[8].length==12) {
 								document.getElementById("temp").innerHTML = "Check passed";
-								url = "https://api.guildwars2.com/v2/characters?page=0&access_token="+key;
-								request(url, function(error, response, html) {
-									if(!error) {
-										document.getElementById("temp").innerHTML = html;
-									}
-								})
+								var doSuccess = function(data, event) {
+									var result = data;
+								};
+								var doError = function(status, text, data, event) {
+									console.log(status, text, data, event);
+								};
+								FW_GW2().getCharactersByPage(key, 0, doSuccess, doError);
 							}
 						}
 					}
