--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
 					<input id="key" size="75">
 					<button class="button1" onclick="getKey()">Enter</button>
 					</p>
-					<p id="temp"></p>
+					<p id="temp"></p><br>
+					<p id="temp2"></p>
 					<script src="assets/js/FW_GW2.js"></script>
 					<script>
 					function getKey() {
@@ -142,7 +143,7 @@
 								var doError = function(status, text, data, event) {
 									console.log(status, text, data, event);
 								};
-								FW_GW2().getCharactersByPage(key, 0, doSuccess, doError);
+								document.getElementById("temp2").innerHTML = FW_GW2().getCharactersByPage(key, 0, doSuccess, doError);
 							}
 						}
 					}
