remove request and FW_GW2
neither is needed with ajax

--- a/index.html
+++ b/index.html
@@ -126,7 +126,6 @@
 					<p id="temp"></p><br>
 					<p id="individual_graph"></p><br>
 					<p id="collective_graph"></p>
-					<script src="assets/js/FW_GW2.js"></script>
 					<script>
 					function getKey() {
 						var key, check, url, full, used;
@@ -142,7 +141,7 @@
 								$.ajax(url)
 								.done(function(data) {
 									if (console && console.log) {
-										console.log("Sample of data:",data[0]);
+										console.log("Sample of data:", data);
 									}
 								});
 							}
