--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 									if (console && console.log) {
 										console.log("Sample of data:", data);
 									}
+									document.getElementById("individual_graph").innerHTML = JSON.stringify(data);
 								});
 							}
 						}
