--- a/index.html
+++ b/index.html
@@ -143,7 +143,10 @@
 									if (console && console.log) {
 										console.log("Sample of data:", data);
 									}
-									document.getElementById("individual_graph").innerHTML = JSON.stringify(data);
+									for (i = 0; i < data.length; i++) {
+										used = data[i].name+"\n";
+										document.getElementById("individual_graph").innerHTML = used;
+									}
 								});
 							}
 						}
