test multiple fields

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 										console.log("Sample of data:", data);
 									}
 									for (i = 0; i < data.length; i++) {
-										text += data[i].name+"<br>";
+										text += data[i].name+" "+data[i].race+" "+data[i].profession+"<br>";
 									}
 									document.getElementById("individual_graph").innerHTML = text;
 								});
