test local storage

--- a/index.html
+++ b/index.html
@@ -149,6 +149,111 @@
 									}
 									document.getElementById("individual_graph").innerHTML = text;
 								});
+								localStorage.setItem('base_components', JSON.stringify({"nodes":
+									[{
+										"id":"Asura",
+										"label":"Asura",
+										"x":-3,
+										"y":2,
+										"size":1
+									},
+									{
+										"id":"Sylvari",
+										"label":"Sylvari",
+										"x":0,
+										"y":3,
+										"size":1
+									},
+									{
+										"id":"Norn",
+										"label":"Norn",
+										"x":3,
+										"y":2,
+										"size":1
+									},
+									{
+										"id":"Human",
+										"label":"Human",
+										"x":2,
+										"y":-3,
+										"size":1
+									},
+									{
+										"id":"Charr",
+										"label":"Charr",
+										"x":-2,
+										"y":-3,
+										"size":1
+									},
+									{
+										"id":"Warrior",
+										"label":"Warrior",
+										"x":0,
+										"y":6,
+										"size":1
+									},
+									{
+										"id":"Guardian",
+										"label":"Guardian",
+										"x":4,
+										"y":5,
+										"size":1
+									},
+									{
+										"id":"Revenant",
+										"label":"Revenant",
+										"x":7,
+										"y":1,
+										"size":1
+									},
+									{
+										"id":"Ranger",
+										"label":"Ranger",
+										"x":6,
+										"y":-4,
+										"size":1
+									},
+									{
+										"id":"Engineer",
+										"label":"Engineer",
+										"x":2,
+										"y":-6,
+										"size":1
+									},
+									{
+										"id":"Thief",
+										"label":"Thief",
+										"x":-2,
+										"y":-6,
+										"size":1
+									},
+									{
+										"id":"Elementalist",
+										"label":"Elementalist",
+										"x":-6,
+										"y":-3,
+										"size":1
+									},
+									{
+										"id":"Necromancer",
+										"label":"Necromancer",
+										"x":-7,
+										"y":1,
+										"size":1
+									},
+									{
+										"id":"Mesmer",
+										"label":"Mesmer",
+										"x":-4,
+										"y":5,
+										"size":1
+									}],  {"edges":
+									[{
+										"id":"e0",
+										"source":"Asura",
+										"target":"Warrior"
+									}]
+								}));
 							}
 						}
 					}
