--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 										"x":-4,
 										"y":5,
 										"size":1
-									}],  {"edges":
+									}],  "edges":
 									[{
 										"id":"e0",
 										"source":"Asura",
